--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Filiados :: Rede Sustentabilidade</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   </head>
-  <body>
+  <body style="margin:0;">
     <div id="root"></div>
     <!--
       This HTML file is a template.
